services/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
    name:
    annotations: 
      kubernetes.io/ingress.class: "nginx"
spec: 
   rules:
    - host: microservice-one.com 
      http: 
         paths:
           - path: /
             backend:
                serviceName: microservice-one-service # pointing to cluster-ipservice.yaml
                servicePort: 3200
